# whisper-smith

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: Makefile  requirements.txt
docs/source/: aligned-json.rst  cli.rst  colab.rst  conf.py  index.rst  installation.rst  python-api.rst  troubleshooting.rst
docs/source/api/: align.rst  diarize.rst  exporters.rst  index.rst  models.rst  transcribe.rst
notebooks/: colab_aligned_transcript.ipynb
src/whisper_smith/: __init__.py  align.py  cli.py  diarize.py  json_to_csv.py  models.py  transcribe.py
src/whisper_smith/exporters/: __init__.py  json.py  markdown.py  subtitles.py  text.py
tests/: test_align.py  test_cli_args.py  test_cli_output_path.py  test_diarize.py  test_exporters.py  test_json_to_csv.py  test_models.py  test_package_import.py  test_transcribe.py
