[project]
name = "whisper-smith"
version = "0.1.0"
description = "A small Python transcription helper using OpenAI speech-to-text APIs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imageio-ffmpeg",
    "openai",
    "pytest>=9.0.3",
    "python-dotenv",
]

[project.optional-dependencies]
diarize = [
    "huggingface-hub<1",
    "numpy<2",
    "pyannote.audio",
    "torch<2.9",
    "torchaudio<2.9",
]

[project.scripts]
whisper-smith = "whisper_smith.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
